<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/coffeetime" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Enter_Name"
        android:inputType="textCapWords" />

    <TextView
        style="@style/HeaderTextStyle"
        android:layout_marginLeft="16dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/toppings"


        />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:paddingLeft="24dp"
        android:text="@string/Whipped_cream"
        android:textColor="@android:color/white"

        />

    <CheckBox
        android:id="@+id/checkbox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:paddingLeft="24dp"
        android:text="@string/chocolate"
        android:textColor="@android:color/white"
        android:textSize="16sp" />


    <TextView
        style="@style/HeaderTextStyle"
        android:layout_margin="16dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/quantity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:fontFamily="sans-serif-light"
            android:onClick="decrease"
            android:text="-"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/initial_quantity_value"
            android:textColor="#000000"
            android:textSize="30sp" />

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:fontFamily="sans-serif-light"
            android:onClick="increase"
            android:text="+"
            android:textColor="#000000"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        style="@style/HeaderTextStyle"
        android:layout_margin="16dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/order_summary"

        />

    <TextView
        android:id="@+id/order_summary_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="0"
        android:layout_marginLeft="16dp"
        android:textColor="#000000"
        android:textSize="24sp" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/order"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="#000000"
        android:textSize="16sp"
        android:onClick="submitOrder"/>


</LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>
